crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__scope_id__nested_with_scope_id.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_with_scope_id(\"<div><span>nested</span></div>\")"
---
function ssrRender(_ctx, _push, _parent, _attrs, _scopeId) {
  _push(`<div${_ssrRenderAttrs(_attrs)} data-v-abc123><span data-v-abc123>nested</span></div>`)
}
